# pywickparse

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  pyserde.rs
test/: test.py
