[package]
name = "pywickparse"
version = "0.1.0"
authors = ["Waddlesworth <github@genj.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0"
john-wick-parse = { git = "https://github.com/SirWaddles/JohnWickParse" }

[dependencies.cpython]
version = "0.2"
features = ["extension-module"]
